fix: scrollbar on Firefox.

--- a/src/Pages/LighthouseOfTech/index.scss
+++ b/src/Pages/LighthouseOfTech/index.scss
@@ -23,6 +23,8 @@
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
     animation-duration: 0.3s;
+    scrollbar-color: rgba(0, 0, 0, 0.5) wheat;
+    scrollbar-width: thin;
 }
 
 .lighthouse-content {
@@ -71,6 +73,8 @@
     background-color: rgba(0, 0, 0, 0.5);
     overflow-y: scroll;
     text-align: justify;
+    scrollbar-color: rgba(0, 0, 0, 0.5) wheat;
+    scrollbar-width: thin;
 }
 
 .lighthouse-carousel {
